--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <header>
     <div class="logo"><strong>Statement Tools</strong></div>
     <nav>
-      <a href="https://convertebankstatement.com/banks.html">Bank Statement Converter</a>
+      <a href="https://convertebankstatement.com/">Bank Statement Converter</a>
     </nav>
   </header>
 
