--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Bank Statement Converter | Convert Bank Statements Easily</title>
   <meta name="description" content="Free Bank Statement Converter tool to convert your bank statements into Excel, PDF, CSV, or Word format. Fast, secure, and easy-to-use online converter.">
   <meta name="keywords" content="bank statement converter, convert bank statement, pdf to excel bank statement, statement to word, csv bank statement converter, free tool">
+  <meta name="google-site-verification" content="GED2lRRB8izGMVGp1Yk-0iSA9hLiQW_6iRlDXzFQCQ4" />
   <style>
     /* Reset & Base */
     * {margin: 0; padding: 0; box-sizing: border-box;}
