--- a/index.html
+++ b/index.html
@@ -97,7 +97,13 @@
     <h2>How It Works</h2>
     <p>Simply upload your bank statement, click “Convert Now,” and download your converted file in your preferred format. It’s that simple!</p>
   </section>
-
+<h3>More Useful Link</h3>
+  <a href="https://x.com/Stmt2CSV">Bank Statemenet Converter Official X Account</a><br>
+  <a href="https://www.quora.com/profile/Convert-Bank-Statement-1">Bank Statemenet Converter Official Quora Account</a><br>
+  <a href="https://convertebankstatement.medium.com/">Bank Statemenet Converter Official Medium Account</a><br>
+  <a href="https://github.com/convertbankstatement">Bank Statemenet Converter Official GitHub Account</a><br>
+  <a href="https://bank-statement-converter-online.netlify.app/">Bank Statemenet Converter Official Netlify Account</a><br>
+  <a href="https://bank-statement-converter-beta.vercel.app/">Bank Statemenet Converter Official Vercel Account</a><br>
   <!-- Footer -->
   <footer>
     <p>&copy; 2025 Bank Statement Converter. All Rights Reserved. | Powered by <a href="https://convertebankstatement.com/">convertebankstatement.com</a></p>
