--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
   <a href="https://github.com/convertbankstatement">Bank Statemenet Converter Official GitHub Account</a><br>
   <a href="https://bank-statement-converter-online.netlify.app/">Bank Statemenet Converter Official Netlify Account</a><br>
   <a href="https://bank-statement-converter-beta.vercel.app/">Bank Statemenet Converter Official Vercel Account</a><br>
+   <a href="https://lnk.bio/bank-statement-converter">Bank Statemenet Converter Link Bio</a><br>
+  <a href="https://sites.google.com/view/convert-bank-statement/">Bank Statemenet Converter Google Site</a><br>
   <!-- Footer -->
   <footer>
     <p>&copy; 2025 Bank Statement Converter. All Rights Reserved. | Powered by <a href="https://convertebankstatement.com/">convertebankstatement.com</a></p>
